--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </li>
 
             <li>
-              <a href="#" class="navbar-link" data-nav-link>about us</a>
+              <a href="About.html" class="navbar-link" data-nav-link>about us</a>
             </li>
 
             <li>
@@ -384,13 +384,40 @@
         </div>
     </section>
     <section class="gallery" id="gallery"></section> 
-    <!--Aqui pones la info de los planetas y eso-->
     <section class="gallery" id="gallery">
-        <div class="container">
+        <div class="container ">
             <p class="section-subtitle">Photo Galley</p>
+            <h2 class="h2 section-title">Photo's of the planets</h2>
+            <p class="section-text">These are some photos of the planets and their surfaces</p>
+            <ul class="gallery-list">
+              <li class="gallery-item">
+                <figure class="gallery-image">
+                  <img src="assets/images/Jupiter_2.jpeg" alt="Jupiter">
+                </figure>
+              </li>
+              <li class="gallery-item">
+                <figure class="gallery-image">
+                  <img src="assets/images/Mars_2.jpeg" alt="Jupiter">
+                </figure>
+              </li>
+              <li class="gallery-item">
+                <figure class="gallery-image">
+                  <img src="assets/images/Titan.jpeg" alt="Jupiter">
+                </figure>
+              </li>
+              <li class="gallery-item">
+                <figure class="gallery-image">
+                  <img src="assets/images/JS.jpg" alt="Jupiter">
+                </figure>
+              </li>
+              <li class="gallery-item">
+                <figure class="gallery-image">
+                  <img src="assets/images/MS.jpg" alt="Jupiter">
+                </figure>
+              </li>
+            </ul>
         </div>
     </section>
-    <!--Hasta aqui-->
     <section class="cta" id="contact">
         <div class="container">
             <div class="cta-content">
