--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
     <section class="gallery" id="gallery"></section> 
     <section class="gallery" id="gallery">
         <div class="container ">
-            <p class="section-subtitle">Photo Galley</p>
+            <p class="section-subtitle">Photo Gallery</p>
             <h2 class="h2 section-title">Photo's of the planets</h2>
             <p class="section-text">These are some photos of the planets and their surfaces</p>
             <ul class="gallery-list">
