--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                     </div>
                 </li>
             </ul>
-            <button class="btn btn-primary">View All Packages</button>
+            <button class="btn btn-primary">Learn more about planets!!!</button>
         </div>
     </section>
     <section class="gallery" id="gallery"></section> 
