--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
     <div class="container">
         <div class="footer-brand">
             <a href="#" class="logo">
-                <img src="images/Logoimago+letras.png" alt="SkyRiders logo">
+                <img src="assets/images/Logoimago+letras.png" alt="SkyRiders logo">
             </a>
             <p class="footer-text">Welcome to Skyriders, where we are on a mission 
                 to redefine the boundaries of travel by making space exploration accessible to all.</p>
