--- a/About.html
+++ b/About.html
@@ -57,7 +57,7 @@
 
 <section>
     <h2>Our Team</h2>
-    <img src="images/team.jpeg" width="400px">
+    <img src="assets/images/team.jpeg" width="400px">
     <ul>
          <li>Diego Nuñez Astronautics expert and leader of our space operations team.</li>
         <li>Vanessa Rodriguez: Space tourism specialist and customer experience lead.</li>
