--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             </a>
           </li>
           <li>
-            <a href="#" class="social-link">
-              <ion-icon name="logo-youtube"></ion-icon>
+            <a href="https://www.tiktok.com/@skyridermx?_t=8gKX9lzI7uw&_r=1" class="social-link">
+              <ion-icon name="logo-tiktok"></ion-icon>
             </a>
           </li>
         </ul>
@@ -224,7 +224,7 @@
                     </div>
                 </li>
             </ul>
-            <button class="btn btn-primary">More Destinations</button>
+            <button class="btn btn-primary">Learn more about planets!!!</button>
         </div>
     </section>
     <section class="package" id="package">
@@ -380,7 +380,7 @@
                     </div>
                 </li>
             </ul>
-            <button class="btn btn-primary">Learn more about planets!!!</button>
+            <a href="Vr.html"><button class="btn btn-primary">Or prove the VR travel!!!</button></a>
         </div>
     </section>
     <section class="gallery" id="gallery"></section> 
@@ -452,7 +452,7 @@
                 </li>
                 <li class="contact-item">
                     <ion-icon name="mail-outline"></ion-icon>
-                    <a href="mailto:marcflorescid@gmail.com" class="contact-link">marcflorescid@gmail.com</a>
+                    <a href="mailto:Skyridermexico@gmail.com" class="contact-link">Skyridermexico@gmail.com</a>
                 </li>
                 <li class="contact-item">
                     <ion-icon name="location-outline"></ion-icon>
