--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                     </div>
                 </li>
             </ul>
-            <button class="btn btn-primary">Learn more about planets!!!</button>
+            <a href="planets.html"><button class="btn btn-primary">Learn more about planets!!!</button></a>
         </div>
     </section>
     <section class="package" id="package">
@@ -276,7 +276,7 @@
                                 </div>
                             </div>
                             <p class="price">
-                                $52 000 cryptomarcians 
+                                $52 000 cryptomartians 
                                 <span>/ per person</span>
                             </p>
                             <a href="Jupiter_Itinerary.pdf" download="Jupiter_Itinerary.pdf"><button class="btn btn-secondary">Buy now!!!</button></a>
@@ -324,7 +324,7 @@
                                 </div>
                             </div>
                             <p class="price">
-                                $60 000 cryptomarcians 
+                                $60 000 cryptomatcians 
                                 <span>/ per person</span>
                             </p>
                             <a href="Titan_Itinerary.pdf" download="Titan_Itinerary.pdf"><button class="btn btn-secondary">Buy now!!!</button></a>
@@ -337,7 +337,7 @@
                             <img src="assets/images/Mars_surface.jpeg" loading="lazy">
                         </figure>
                         <div class="card-content">
-                            <h3 class="h3 card-title">Marcian Package</h3>
+                            <h3 class="h3 card-title">Martian Package</h3>
                             <p class="card-text">We have activities like dinner with curiosity to climbing the largest montain in the solar system</p>
                             <ul class="card-meta-list">
                                 <li class="card-meta-item">
@@ -372,7 +372,7 @@
                                 </div>
                             </div>
                             <p class="price">
-                                $32 000 cryptomarcians 
+                                $32 000 cryptomartians 
                                 <span>/ per person</span>
                             </p>
                             <a href="Mars_Itinerary.pdf" download="Mars_Itinerary.pdf"><button class="btn btn-secondary">Buy now!!!</button></a>
@@ -380,7 +380,17 @@
                     </div>
                 </li>
             </ul>
-            <a href="Vr.html"><button class="btn btn-primary">Or prove the VR travel!!!</button></a>
+            <h2 class="h2 section-title">Keep these precautions & recommendations in mind</h2>
+            Beware, these are some of the main discomforts that you can present in microgravity!
+          <ol>
+            <li><b>Spatial adaptation syndrome</b>
+(During the first 48 or 72 hours): self-controlling nausea, vomiting, dizziness, sweating, pallor, malaise, vertigo, headache, lethargy, uncoordinated movements and decreased concentration, 
+gastric discomfort, anorexia, loss of appetite, drastic decrease in bowel sounds and projectile vomiting that culminate in the clinical picture and will not occur again throughout the trip.</li>
+            <li><b>"Bird legs."</b> The first thing that happens is the rearrangement of body fluids; There will be migration of fluids to upper parts of the body consequently the lower limbs lose volume generating this characteristic.  
+ It's not all bad! You will increase in size while you are in these conditions since there will be changes in the length of your spine (loss of anatomical curvatures), increased thickness of the intervertebral discs in addition to an increase in the secretion of growth hormone that will contribute to this change.</li>
+ <li>You can experience changes in vision! do not panic, it is normal that your visual acuity decreases in the first days, with the passage of days it will return to normal.</li>
+ <li><b>To feel better:</b> avoid sudden maneuvers in the movement of the head and body, postpone extreme physical activities in the first days of flight, the use of promethazine as a prophylactic treatment will help you minimize these symptoms<li></li>
+            </ol>
         </div>
     </section>
     <section class="gallery" id="gallery"></section> 
@@ -397,12 +407,12 @@
               </li>
               <li class="gallery-item">
                 <figure class="gallery-image">
-                  <img src="assets/images/Mars_2.jpeg" alt="Jupiter">
+                  <img src="assets/images/Mars_2.jpeg" alt="Mars">
                 </figure>
               </li>
               <li class="gallery-item">
                 <figure class="gallery-image">
-                  <img src="assets/images/Titan.jpeg" alt="Jupiter">
+                  <img src="assets/images/Titan.jpeg" alt="Titan">
                 </figure>
               </li>
               <li class="gallery-item">
@@ -412,7 +422,7 @@
               </li>
               <li class="gallery-item">
                 <figure class="gallery-image">
-                  <img src="assets/images/MS.jpg" alt="Jupiter">
+                  <img src="assets/images/MS.jpeg" alt="Mars">
                 </figure>
               </li>
             </ul>
@@ -422,7 +432,7 @@
         <div class="container">
             <div class="cta-content">
                 <p class="section-subtitle">Call to Action</p>
-                <h2 class="h2 section-title">Ready for a unforgettable travel?. Remember Us!</h2>
+                <h2 class="h2 section-title">Ready for a unforgettable travel? Remember Us!</h2>
                 <p class="section-text">We offer great quality and above all, great experiences on your trips.</p>
             </div>
             <button class="btn btn-secondary">Contact Us!</button>
