--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                                 </div>
                             </div>
                             <p class="price">
-                                $60 000 cryptomatcians 
+                                $60 000 cryptomartians 
                                 <span>/ per person</span>
                             </p>
                             <a href="Titan_Itinerary.pdf" download="Titan_Itinerary.pdf"><button class="btn btn-secondary">Buy now!!!</button></a>
